@@ -6,6 +6,8 @@ Version 1.8.9
        unexpected results. (Stefan)
 - BUG: Issue #667: Detect if repository browser
        was cancelled. (Stefan)
+- BUG: Issue #669: Repobrowser closes when escape is
+       pressed to cancel an edit. (Stefan)
 
 Version 1.8.8
 - BUG: Issue #640: Restore after commit - Unchecked
